# remarkablecrosswords

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  TODO.md  TODO_DONE.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  todo.md
.github/workflows/: build.yml
app/: auth.py  config.py  csrf.py  database.py  deps.py  main.py  scheduler.py  schemas.py
app/routes/: __init__.py  auth.py  crosswords.py  dashboard.py  jobs.py  remarkable_api.py  settings.py  sources.py
app/services/: notifier.py  remarkable.py
app/services/notifiers/: __init__.py  base.py  ntfy.py
app/services/sources/: __init__.py  base.py  korsordio.py
app/services/sources/keesing/: __init__.py
app/services/sources/korsordio/: __init__.py  spec.md
app/services/sources/prenly/: __init__.py  spec.md
app/services/sources/sr_melodikryss/: __init__.py  spec.md
app/services/sources/yippie_harnosand/: __init__.py  spec.md
app/templates/: base.html  dashboard.html  login.html  settings.html
app/templates/crosswords/: list.html
app/templates/jobs/: detail.html  list.html
app/templates/sources/: detail.html  form.html  list.html
keesing/: __init__.py  __main__.py  fetch.py  render.py  render_crossword.py  render_sudoku.py  render_tectonic.py  spec.md
korsordio/: README.md  __init__.py  __main__.py  fetch.py  metadata.py  render.py  spec.md
static/: pdf-preview.js
