[project]
name = "remarkablecrosswords"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
    "starlette>=0.36.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "cairosvg>=2.7.0",
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
